--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -1,6 +1,6 @@
 <H2>New Film</H2>
-<form action="/Films" method="POST" enctype="multipart/form-data">
+<form action="/films" method="POST" enctype="multipart/form-data">
     <%- include('_form_fields') %>
-    <a href="/Films">cancel</a>
+    <a href="/films">cancel</a>
     <button type="submit">Create</button>
 </form>
