--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,8 @@
         <ul>
             <li><a href="/directors">Directors</a></li>
             <li><a href="/directors/new">Add Director</a></li>
-            <li><a href="/Films">Films</a></li>
-            <li><a href="/Films/new">Add a Film</a></li>
+            <li><a href="/films">Films</a></li>
+            <li><a href="/films/new">Add a Film</a></li>
         </ul>
     </nav>
 </header>
