--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -1,6 +1,7 @@
 <H2>New Film</H2>
 <form action="/films" method="POST" enctype="multipart/form-data">
-    <%- include('_form_fields') %>
+    <%= include('_form_fields') %>
     <a href="/films">cancel</a>
     <button type="submit">Create</button>
 </form>
+
