--- a/views/films/_form_fields.ejs
+++ b/views/films/_form_fields.ejs
@@ -1,18 +1,10 @@
+<% const genre = ['horror', 'comedy', 'fantasy', 'classic, 'drama', 'war', 'action, 'adventure', 'psychological'] %>
 <div>
     <label>Title</label>
     <input type="text" name="title" value="<%= film.title %>" required>
 </div>
 <div>
-    <label>Director</label>
-    <select name="director">
-    <% directors.forEach(director => { %>
-        <% if (director.id === film.director) { %>
-            <option selected label="<%= director.name %>" value="<%= director.id %>"></option>
-            <% } else { %>
-                    <option value="<%= director.id %>"><%= director.name %></option>
-                    <% } %>
-                <% }) %>
-    </select>
+
 </div>
 <div>
     <label>Release Year</label>
