--- a/views/films/_form_fields.ejs
+++ b/views/films/_form_fields.ejs
@@ -1,5 +1,17 @@
 
 <div>
+    <label>Release Year</label>
+    <input type="number" name="releaseYear" value="<%= film.releaseYear %>" required>    
+</div>
+<div>
+    <label>Genre</label>
+    <select name="genre">
+        <% genre.forEach(g => { %>
+            <option value="<%= g %>"><%= g %></option>
+        <% }) %>
+    </select>
+</div>
+<div>
     <label>Length</label>
     <input type="number" name="length" min="1" value="<%= film.length %>" required>    
 </div>
