--- a/views/films/_form_fields.ejs
+++ b/views/films/_form_fields.ejs
@@ -29,6 +29,7 @@
                         <option value="<%= g %>"><%= g %></option>
                         <% } %>
                     <% }) %>
+    </select>
 </div>
 <div>
     <label>Length</label>
