--- a/views/films/_form_fields.ejs
+++ b/views/films/_form_fields.ejs
@@ -37,7 +37,7 @@
 </div>
 <div>
     <label>poster</label>
-    <input type="file" name="poster" required>    
+    <input type="file" class="filepond" name="poster" required>    
 </div>
 <div>
     <label>description</label>
