--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -1,5 +1,5 @@
 <H2>New Film</H2>
-<form action="/films" method="POST" enctype="multipart/form-data">
+<form action="/films" method="POST">
     <%- include('_form_fields') %>
     <a href="/films">cancel</a>
     <button type="submit">Create</button>
