--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <h2>Recently Added</h2>
 <div>
   <% films.forEach(film => { %>
-    <img height="150" width="100" src="<%= film.posterImagePath %>"> }
+    <img height="150" width="100" src="<%= film.posterImagePath %>"> 
   <% }) %>
 </div>
