--- a/views/films/index.ejs
+++ b/views/films/index.ejs
@@ -18,6 +18,6 @@
 </form>
 <div>
     <% films.forEach(film => { %>
-        <img height="150" width="100" src="<%= film.posterImagePath %>">
+      <a href="/films/<%= film.id %>"><img height="150" width="100" src="<%= film.posterImagePath %>">  </a>
     <% }) %>
-</div>
+  </div>
