--- a/views/films/_form_fields.ejs
+++ b/views/films/_form_fields.ejs
@@ -1,10 +1,24 @@
-<% const genre = ['horror', 'comedy', 'fantasy', 'classic', 'drama', 'war', 'action', 'adventure', 'psychological'] %>
+<% const genre = [' Action', ' Drama', ' Comedy', ' Horror', ' Fantasy', ' Crime', ' Adventure', ' War', ' Sports', ' Psychological'] %>
 <div>
-    <label>Title</label>
+    <label>Title: </label>
     <input type="text" name="title" value="<%= film.title %>" required>
 </div>
 <div>
-    <label>Director</label>
+    Genre: 
+    <% genre.forEach(g => { %>
+        <label><input name="genre" type="checkbox" value="<%= g %>"><%= g %></label>
+        <% }) %>
+</div>
+<div>
+    <label>Release Year: </label>
+    <input type="number" name="releaseYear" value="<%= film.releaseYear %>" required>    
+</div>
+<div>
+    <label>Runtime: </label>
+    <input type="number" name="runTime" min="1" value="<%= film.length %>" required>    
+</div>
+<div>
+    <label>Director: </label>
     <select name="director">
     <% directors.forEach(director => { %>
         <% if (director.id === film.director) { %>
@@ -16,33 +30,31 @@
     </select>
 </div>
 <div>
-    <label>Release Year</label>
-    <input type="number" name="releaseYear" value="<%= film.releaseYear %>" required>    
+    <label>Writers: </label>
+    <input type="text" name="writers" value="<%= film.writers %>" required>    
 </div>
 <div>
-    <label>Genre</label>
-    <select name="genre">
-        <% genre.forEach(g => { %>
-            <% if (g === film.genre) { %>
-                <option selected label="<%= g %>" value="<%= g %>"></option>
-                <% } else { %>
-                        <option value="<%= g %>"><%= g %></option>
-                        <% } %>
-                    <% }) %>
-    </select>
+    <label>Stars: </label>
+    <input type="text" name="stars" value="<%= film.stars %>" required>    
 </div>
 <div>
-    <label>Length</label>
-    <input type="number" name="length" min="1" value="<%= film.length %>" required>    
+    <label>Score: </label>
+    <input type="text" name="score" min="1" max="10" value="<%= film.score %>" required>    
 </div>
 <div>
-    <label>poster</label>
-    <input type="file" class="filepond" name="poster" required>    
+    <label>Summary: </label>
+    <textarea name="summary" required><%= film.summary %></textarea> 
 </div>
 <div>
-    <label>description</label>
+    <label>Description: </label>
     <textarea name="description" required><%= film.description %></textarea> 
 </div>
+<div>
+    <label>Poster: </label>
+    <input type="file" class="filepond" name="poster" required>    
+</div>
+
+
 
 
 
