--- a/views/films/edit.ejs
+++ b/views/films/edit.ejs
@@ -1,4 +1,4 @@
-<H2>Edit Film</H2>
+<H2 class="page-header">Edit Film</H2>
 <form action="/films/<%= film.id %>?_method=PUT" method="POST">
     <%- include('_form_fields') %>
     <a href="/films">cancel</a>
