--- a/views/films/index.ejs
+++ b/views/films/index.ejs
@@ -1,5 +1,5 @@
-<% const genre = ['horror', 'comedy', 'fantasy', 'classic', 'drama', 'war', 'action', 'adventure', 'psychological', 'mystery'] %>
-<h2>Search Film</h2>
+<% const genre = [' Action', ' Drama', ' Comedy', ' Horror', ' Fantasy', ' Crime', ' Adventure', ' War', ' Sports', ' Psychological'] %>
+<h2 class="page-header">Search Film</h2>
 <form action="/films" method="GET">
     <div>
         <label>Title</label>
