--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -1,4 +1,4 @@
-<H2>New Film</H2>
+<H2 class="page-header">New Film</H2>
 <form action="/films" method="POST">
     <%- include('_form_fields') %>
     <a href="/films">cancel</a>
