--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<h2>Recently Added</h2>
+<h2 class="page-header">Recently Added</h2>
 <div>
   <% films.forEach(film => { %>
     <a href="/films/<%= film.id %>"><img height="150" width="100" src="<%= film.posterImagePath %>">  </a>
