--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,14 @@
 <header>
-    <nav>
-        <a href="/">TrueFilm</a>
+    <nav class="header-nav">
+        <a class="header-title" href="/">TrueFilm</a>
         <ul>
-            <li><a href="/directors">Directors</a></li>
-            <li><a href="/directors/new">Add Director</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Quote</a></li>
             <li><a href="/films">Films</a></li>
+            <li><a href="/directors">Directors</a></li>
+            <li><a href="/directors">Contact</a></li>
             <li><a href="/films/new">Add a Film</a></li>
+            <li><a href="/directors/new">Add a Director</a></li>
         </ul>
     </nav>
 </header>
