--- a/views/directors/new.ejs
+++ b/views/directors/new.ejs
@@ -1,4 +1,4 @@
-<H2>New Director</H2>
+<H2 class="page-header">New Director</H2>
 <form action="/directors" method="POST">
     <%- include('_form_fields') %>
     <a href="/directors">cancel</a>
