--- a/public/stylesheets/shared/fonts.css
+++ b/public/stylesheets/shared/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
 	font-family: 'Gotham Rounded';
 	src: url('/fonts/GothamRounded-Bold.woff2') format('woff2'),
 		url('/fonts/GothamRounded-Bold.woff') format('woff');
@@ -28,4 +28,4 @@
 		url('/fonts/GothamRounded-Book.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
-}
+} */
