--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,6 +12,8 @@
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
     <link rel="stylesheet" href="/stylesheets/main.css"></link>
+    <link href="http://fonts.cdnfonts.com/css/gotham-rounded" rel="stylesheet">
+
     <title>TrueFilm</title>
 </head>
 <body>
