--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -13,6 +13,7 @@
     <script defer src="/javascripts/fileUpload.js"></script>
     <link href="http://fonts.cdnfonts.com/css/gotham-rounded" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/main.css"></link>
+    <link rel="preload" as="font" href="/stylesheets/main.css">
 
     <title>TrueFilm</title>
 </head>
