--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,8 +12,13 @@
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
     <link href="http://fonts.cdnfonts.com/css/gotham-rounded" rel="stylesheet">
+    <style>
+      @import url('http://fonts.cdnfonts.com/css/gotham-rounded');
+</style>
+
     <link rel="stylesheet" href="/stylesheets/main.css"></link>
     <link rel="preload" as="font" href="/stylesheets/main.css">
+
 
     <title>TrueFilm</title>
 </head>
