--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,6 +12,15 @@
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
     <link rel="stylesheet" href="/stylesheets/main.css"></link>
+    <style>
+/* On screens that are 992px wide or less, the background color is blue */
+      @media screen and (max-width: 800px) {
+  * {
+    display: none;
+  }
+}
+
+    </style>
     <title>TrueFilm</title>
 </head>
 <body>
