--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,7 +16,7 @@
 /* On screens that are 992px wide or less, the background color is blue */
       @media screen and (max-width: 800px) {
   * {
-    display: none;
+    display: block;
   }
 }
 
