--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/stylesheets/main.css"></link>
     <title>TrueFilm</title>
 </head>
-<body>
+<body style="background:linear-gradient(to right,  hsl(200, 15%, 9%), hsl(200, 5%, 18%));">
     <div class="container">
         <%- include('../partials/header.ejs') %>
         <div class="inner-container">
