--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,7 +7,8 @@
     font-family: 'Gotham Rounded';
     font-size: 20px;
     color: white;
-    background: linear-gradient(to right, var(--color-background-dark), var(--color-background-light));
+    /* background: linear-gradient(to right, var(--color-background-dark), var(--color-background-light)); */
+    background-color: var(--color-background-dark);
 }
 
 *, *::before, *::after {
@@ -18,13 +19,16 @@
     max-width: 1200px;
     margin: auto;
     margin-bottom: 3rem;
+    position: relative;
 }
 
 .inner-container {
     font-weight: 300;
     margin: 0 2rem;
     padding-left: 20px;
-
+    position: relative;
+    top: -50px;
+    min-height: 1000px;
 }
 
 .page-header {
