--- a/public/stylesheets/shared/header.css
+++ b/public/stylesheets/shared/header.css
@@ -9,6 +9,7 @@
     text-decoration: none;
     font-size: var(--nav-title-font-size);
     font-weight: var(--nav-title-font-weight);
+    margin-left: -150px;
 }
 
 .header-nav {
@@ -22,6 +23,8 @@
 .header-nav ul {
     display: flex;
     margin: 0;
+    margin-top: 20px;
+    margin-right: 100px;
     padding: 0;
     border-radius: 0.5rem;
     border-top: 1px solid white;
