--- a/views/directors/_form_fields.ejs
+++ b/views/directors/_form_fields.ejs
@@ -1,2 +1,8 @@
-<label>Name</label>
-<input type="text" name="name" value="<%= director.name %>">
+<div class="form-row">
+    <div class="form-item">
+        <label>Name</label>
+        <input type="text" name="name" value="<%= director.name %>">
+        <label>Description</label>
+        <input type="text" name="description" value="<%= director.description %>">
+    </div>
+</div>
