--- a/views/directors/index.ejs
+++ b/views/directors/index.ejs
@@ -1,19 +1,29 @@
 <h2 class="page-header">Search Directors</h2>
 <form action="/directors" method="GET">
-    <label>Name</label>
-    <input type="text" name="name" value="<%= searchOptions.name %>">
-    <button type="submit">Search</button>
+    <div class="form-row">
+        <div class="form-item">
+            <label>Name</label>
+            <input type="text" name="name" value="<%= searchOptions.name %>">
+        </div>
+    </div>
+
+    <div class="form-row form-row-end">
+        <button class="btn btn-primary" type="submit">Search</button>
+    </div>
 </form>
+
 <br>
 <% directors.forEach(director => { %>
-    <div><%= director.name %></div>
-    <div class="btn-row">
-    <a class="btn btn-primary" href="/directors/<%= director.id %>">View</a>
-    <a class="btn btn-primary" href="/directors/<%= director.id %>/edit">Edit</a>
-    <%- include('../partials/deleteForm',
-    { url: `/directors/${director.id}` }) %>
+    <div class="director-row">
+        <div class="director-name"><%= director.name %></div>
+        <div class="btn-row">
+        <a class="btn btn-primary" href="/directors/<%= director.id %>">View</a>
+        <a class="btn btn-primary" href="/directors/<%= director.id %>/edit">Edit</a>
+        <%- include('../partials/deleteForm',
+        { url: `/directors/${director.id}` }) %>
+        </div>
     </div>
-    <% }) %>
+        <% }) %>
 
 
     
