--- a/views/directors/new.ejs
+++ b/views/directors/new.ejs
@@ -1,6 +1,8 @@
 <H2 class="page-header">New Director</H2>
 <form action="/directors" method="POST">
     <%- include('_form_fields') %>
-    <a href="/directors">cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-primary" href="/directors">cancel</a>
+        <button class="btn btn-primary" type="submit">Create</button>
+    </div>
 </form>
