--- a/views/films/_form_fields.ejs
+++ b/views/films/_form_fields.ejs
@@ -1,60 +1,77 @@
 <% const genre = [' Action', ' Drama', ' Comedy', ' Horror', ' Fantasy', ' Crime', ' Adventure', ' War', ' Sports', ' Psychological'] %>
-<div>
-    <label>Title: </label>
-    <input type="text" name="title" value="<%= film.title %>" required>
-</div>
-<div>
-    Genre: 
-    <% genre.forEach(g => { %>
-        <label><input name="genre" type="checkbox" value="<%= g %>"><%= g %></label>
-        <% }) %>
-</div>
-<div>
-    <label>Release Year: </label>
-    <input type="number" name="releaseYear" value="<%= film.releaseYear %>" required>    
-</div>
-<div>
-    <label>Runtime: </label>
-    <input type="number" name="runTime" min="1" value="<%= film.length %>" required>    
-</div>
-<div>
-    <label>Director: </label>
-    <select name="director">
-    <% directors.forEach(director => { %>
-        <% if (director.id === film.director) { %>
-            <option selected label="<%= director.name %>" value="<%= director.id %>"></option>
-            <% } else { %>
-                    <option value="<%= director.id %>"><%= director.name %></option>
-                    <% } %>
-                <% }) %>
-    </select>
-</div>
-<div>
-    <label>Writers: </label>
-    <input type="text" name="writers" value="<%= film.writers %>" required>    
-</div>
-<div>
-    <label>Stars: </label>
-    <input type="text" name="stars" value="<%= film.stars %>" required>    
-</div>
-<div>
-    <label>Score: </label>
-    <input type="text" name="score" min="1" max="10" value="<%= film.score %>" required>    
-</div>
-<div>
-    <label>Summary: </label>
-    <textarea name="summary" required><%= film.summary %></textarea> 
-</div>
-<div>
-    <label>Description: </label>
-    <textarea name="description" required><%= film.description %></textarea> 
-</div>
-<div>
-    <label>Poster: </label>
-    <input type="file" class="filepond" name="poster" required>    
+
+<div class="form-row">
+    <div class="form-item title">
+        <label>Title </label>
+        <input type="text" name="title" value="<%= film.title %>" >
+    </div>
 </div>
 
+<div class="form-row">
+    <div class="form-item gen">
+        <span class="gen">Genre </span>
+        <% genre.forEach(g => { %>
+            <label><input name="genre" type="checkbox" value="<%= g %>"><%= g %></label>
+            <% }) %>
+    </div>
+</div>
 
+<div class="form-row">
+    <div class="form-item">
+        <label>Release Year </label>
+        <input type="number" name="releaseYear" value="<%= film.releaseYear %>" >    
+    </div>
+    <div class="form-item">
+        <label>Runtime </label>
+        <input type="number" name="runTime" min="1" value="<%= film.runTime %>" >
+    </div>    
+</div>
+<div class="form-row">
+    <div class="form-item">
+        <label>Director </label>
+        <select name="director">
+        <% directors.forEach(director => { %>
+            <% if (director.id === film.director) { %>
+                <option selected label="<%= director.name %>" value="<%= director.id %>"></option>
+                <% } else { %>
+                        <option value="<%= director.id %>"><%= director.name %></option>
+                        <% } %>
+                    <% }) %>
+        </select>
+    </div>
+    <div class="form-item">
+        <label>Writers </label>
+        <input type="text" name="writers" value="<%= film.writers %>" >
+    </div>    
+</div>
 
+<div class="form-row">
+    <div class="form-item">
+        <label>Stars </label>
+        <input type="text" name="stars" value="<%= film.stars %>" >  
+    </div>
+    <div class="form-item">
+        <label>Score: </label>
+        <input type="text" name="score" min="1" max="10" value="<%= film.score %>" >    
+    </div>
+</div>
+
+<div class="form-row">
+    <div class="form-item">
+        <label>Summary </label>
+        <textarea name="summary" ><%= film.summary %></textarea> 
+    </div>
+</div>
+
+<div class="form-row">
+    <div class="form-item">
+        <label>Description </label>
+        <textarea name="description" ><%= film.description %></textarea> 
+    </div>
+    <div class="form-item form-item-no-grow">
+        <label>Poster </label>
+        <input type="file" class="film-poster filepond" name="poster" >    
+    </div>
+</div>
 
 
