--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -1,7 +1,9 @@
 <H2 class="page-header">New Film</H2>
 <form action="/films" method="POST">
     <%- include('_form_fields') %>
-    <a href="/films">cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-primary" href="/films">cancel</a>
+        <button class="btn btn-primary" type="submit">Create</button>
+    </div>
 </form>
 
