--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,6 @@
 <h2 class="page-header">Recently Added Films</h2>
-<div>
-  <% films.forEach(film => { %>
-    <a href="/films/<%= film.id %>"><img height="150" width="100" src="<%= film.posterImagePath %>">  </a>
-  <% }) %>
-</div>
+<%- include('partials/filmGrid', { films: films, large: true}) %>
 <h2 class="page-header">Recently Added Directors</h2>
-<div>
-  <% films.forEach(film => { %>
-    <a href="/films/<%= film.id %>"><img height="150" width="100" src="<%= film.posterImagePath %>">  </a>
-  <% }) %>
-</div>
+<%- include('partials/filmGrid', { films: films, large: true}) %>
 <h2 class="page-header">Featured</h2>
-<div>
-  <% films.forEach(film => { %>
-    <a href="/films/<%= film.id %>"><img height="150" width="100" src="<%= film.posterImagePath %>">  </a>
-  <% }) %>
-</div>
+<%- include('partials/filmGrid', { films: films, large: true}) %>
