--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -11,7 +11,7 @@
     <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
-    <link rel="stylesheet" href="/stylesheets/main.css"></link>
+    <link id="main-css" rel="stylesheet" href="/stylesheets/main.css">
     <title>TrueFilm</title>
 </head>
 <body>
