--- a/views/films/_form_fields.ejs
+++ b/views/films/_form_fields.ejs
@@ -58,15 +58,15 @@
 
 <div class="form-row">
     <div class="form-item">
-        <label>Summary </label>
-        <textarea name="summary" ><%= film.summary %></textarea> 
+        <label>Description </label>
+        <textarea name="description" ><%= film.description %></textarea> 
     </div>
 </div>
 
 <div class="form-row">
     <div class="form-item">
-        <label>Description </label>
-        <textarea name="description" ><%= film.description %></textarea> 
+        <label>review </label>
+        <textarea name="review" ><%= film.review %></textarea> 
     </div>
     <div class="form-item form-item-no-grow">
         <label>Poster </label>
