--- a/views/films/show.ejs
+++ b/views/films/show.ejs
@@ -21,11 +21,12 @@
         <div> <%= film.writers %></div>
         <div class="film-details-label">Stars </div>
         <div> <%= film.stars %></div>
-        <div class="film-details-label">Score </div>
-        <div> <%= film.score %></div>
-        <div class="film-details-label">Summary </div>
-        <div> <%= film.summary %></div>
         <div class="film-details-label">Description </div>
         <div> <%= film.description %></div>
+        <div class="film-details-label">Score </div>
+        <div> <%= film.score %></div>
+        <div class="film-details-label">review </div>
+        <div> <%= film.review %></div>
+
     </div>
 </div>
