--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
 <h2 class="page-header">Recently Added Films</h2>
 <%- include('partials/filmGrid', { films: films, large: true}) %>
-<h2 class="page-header">Recently Added Directors</h2>
-<%- include('partials/filmGrid', { films: films, large: true}) %>
 <h2 class="page-header">Featured</h2>
-<%- include('partials/filmGrid', { films: films, large: true}) %>
+<%- include('partials/filmGrid', { films: filmsFeat, large: true}) %>
+<%- include('partials/contact') %>
