--- a/public/stylesheets/shared/forms.css
+++ b/public/stylesheets/shared/forms.css
@@ -70,7 +70,7 @@
     color: white;
     font-family: 'Gotham Rounded';
     font-size: 1rem;
-    font-weight: light;
+    font-weight: 300;
     outline: none;
   }
   
