--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -74,6 +74,7 @@
     width: 350px;
     height: 150px;
     background-color: var(--color-background-dark);
+    resize: none;
 }
 
 .form-header {
