--- a/views/directors/_form_fields.ejs
+++ b/views/directors/_form_fields.ejs
@@ -1,8 +1,12 @@
 <div class="form-row">
-    <div class="form-item">
+    <div class="form-item dir-name">
         <label>Name</label>
         <input type="text" name="name" value="<%= director.name %>">
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-item">
         <label>Description</label>
-        <input type="text" name="description" value="<%= director.description %>">
+        <textarea name="description"><%= director.description%></textarea> 
     </div>
 </div>
