--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -35,6 +35,14 @@
     min-height: 1000px;
 }
 
+@media only screen and (max-width: 1000px) {
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+}
+
 .page-header {
     font-size: 2.5rem;
     font-weight: 300;
