--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -36,6 +36,12 @@
 }
 
 @media only screen and (max-width: 1000px) {
+    html, body {
+        overflow-x: hidden;
+      }
+      body {
+        position: relative
+      }
     body {
         display: flex;
         flex-wrap: wrap;
