--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -51,24 +51,27 @@
     .inner-container {
         display: flex;
         flex-wrap: wrap;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
     }
     .header-nav {
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: column;
         justify-content: center;
         align-items: center;
     }
     .page-header {
         display: flex;
         flex-wrap: wrap;
+        text-align: center;
         justify-content: center;
         align-items: center;
     }
     .header-title {
         display: flex;
         flex-wrap: wrap;
+        text-align: center;
         justify-content: center;
         align-items: center;
     }
