--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -40,11 +40,14 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        justify-items: center;
         align-items: center;
     }
     .container {
         display: flex;
         flex-wrap: wrap;
+        flex-direction: row;
+        justify-items: center;
         justify-content: center;
         align-items: center;
     }
@@ -52,12 +55,15 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+        justify-items: center;
         justify-content: center;
         align-items: center;
     }
     .header-nav {
         display: flex;
         flex-wrap: column;
+        flex-direction: row;
+        justify-items: center;
         justify-content: center;
         align-items: center;
     }
@@ -65,6 +71,8 @@
         display: flex;
         flex-wrap: wrap;
         text-align: center;
+        flex-direction: row;
+        justify-items: center;
         justify-content: center;
         align-items: center;
     }
@@ -72,6 +80,8 @@
         display: flex;
         flex-wrap: wrap;
         text-align: center;
+        flex-direction: row;
+        justify-items: center;
         justify-content: center;
         align-items: center;
     }
@@ -79,12 +89,15 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        justify-items: center;
         align-items: center;
     }
     .film-grid {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        justify-items: center;
+        flex-direction: row;
         align-items: center;
     }
 }
