--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -77,6 +77,9 @@
         flex-direction: row;
         align-items: center;
     }
+    .dir-index {
+        margin-left: 50px;
+    }
 }
 
 .page-header {
