--- a/views/directors/index.ejs
+++ b/views/directors/index.ejs
@@ -1,7 +1,7 @@
 <h2 class="page-header">Search Directors</h2>
 <form action="/directors" method="GET">
     <div class="form-row">
-        <div class="form-item">
+        <div class="form-item dir-index">
             <label>Name</label>
             <input type="text" name="name" value="<%= searchOptions.name %>">
         </div>
