--- a/views/directors/index.ejs
+++ b/views/directors/index.ejs
@@ -1,7 +1,7 @@
 <h2 class="page-header">Search Directors</h2>
 <form action="/directors" method="GET">
     <div class="form-row">
-        <div class="form-item dir-index">
+        <div class="form-item">
             <label>Name</label>
             <input type="text" name="name" value="<%= searchOptions.name %>">
         </div>
@@ -14,7 +14,7 @@
 
 <br>
 <% directors.forEach(director => { %>
-    <div class="director-row">
+    <div class="director-row dir-index">
         <div class="director-name"><%= director.name %></div>
         <div class="btn-row">
         <a class="btn btn-primary" href="/directors/<%= director.id %>">View</a>
