--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,8 @@
             <li><a href="/">About</a></li>
             <li><a href="/films">Films</a></li>
             <li><a href="/directors">Directors</a></li>
-            <li><a href="/films/new">Add a Film</a></li>
-            <li><a href="/directors/new">Add a Director</a></li>
+            <li><a href="/films/new">New Film</a></li>
+            <li><a href="/directors/new">New Director</a></li>
         </ul>
     </nav>
 </header>
