--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -77,6 +77,11 @@
         flex-direction: row;
         align-items: center;
     }
+    .director-row {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+    }
     .dir-index {
         margin-left: 100px;
     }
