--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -36,6 +36,12 @@
 }
 
 @media only screen and (max-width: 1000px) {
+    .container {
+        display: flex;
+        justify-items: center;
+        justify-content: center;
+        align-items: center;
+    }
     .inner-container {
         justify-items: center;
         justify-content: center;
