--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,6 +38,7 @@
 @media only screen and (max-width: 1000px) {
     .container {
         display: flex;
+        flex-direction: column;
         justify-items: center;
         justify-content: center;
         align-items: center;
