--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -37,12 +37,11 @@
 
 @media only screen and (max-width: 1000px) {
     .container {
-        display: flex;
-        flex-direction: column;
         justify-items: center;
         justify-content: center;
         align-items: center;
         margin: 0;
+        width: 100%;
     }
     .inner-container {
         display: flex;
@@ -51,6 +50,7 @@
         justify-content: center;
         align-items: center;
         margin: 0;
+        width: 100%;
     }
     .page-header {
         display: flex;
@@ -60,6 +60,7 @@
         justify-content: center;
         align-items: center;
         margin: 0;
+        width: 100%;
     }
     .header-title {
         display: flex;
@@ -69,6 +70,7 @@
         justify-content: center;
         align-items: center;
         margin: 0;
+        width: 100%;
     }
     .contact {
         display: flex;
@@ -77,18 +79,22 @@
         justify-items: center;
         align-items: center;
         margin: 0;
+        width: 100%;
     }
     .film-grid {
         display: flex;
         flex-direction: column;
+        justify-items: center;
         justify-content: center;
         margin: 0;
+        width: 100%;
     }
     .director-row {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         margin-bottom: 1rem;
+        width: 100%;
     }
     .dir-index {
         margin-left: 100px;
@@ -99,6 +105,7 @@
         justify-content: center;
         justify-items: center;
         align-items: center;
+        width: 100%;
     }
 }
 
