--- a/views/directors/edit.ejs
+++ b/views/directors/edit.ejs
@@ -3,6 +3,6 @@
   <%- include('_form_fields') %>
   <div class="form-row form-row-end btn-row">
     <a class="btn btn-primary" href="/directors/<%= director.id %>">Cancel</a>
-    <button class="btn btn-primary" type="submit">Update</button>
+    <button class="btn btn-primary" type="submit" disabled>Update</button>
   </div>
 </form>
