--- a/views/directors/new.ejs
+++ b/views/directors/new.ejs
@@ -3,6 +3,6 @@
     <%- include('_form_fields') %>
     <div class="form-row form-row-end btn-row">
         <a class="btn btn-primary" href="/directors">cancel</a>
-        <button class="btn btn-primary" type="submit">Create</button>
+        <button class="btn btn-primary" type="submit" disabled>Create</button>
     </div>
 </form>
