--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -99,6 +99,9 @@ button {
         align-items: center;
         width: 100%;
     }
+    li a {
+        font-size: 10px;
+    }
 }
 
 .page-header {
