--- a/public/stylesheets/shared/header.css
+++ b/public/stylesheets/shared/header.css
@@ -24,6 +24,7 @@
     display: flex;
     margin: 0;
     margin-top: 20px;
+    margin-right: 50px;
     padding: 0;
     border-radius: 0.5rem;
     border-top: 1px solid white;
