--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -102,6 +102,9 @@ button {
     li a {
         font-size: 10px;
     }
+    .header-nav ul {
+        margin-right: 0px;
+    }
 }
 
 .page-header {
