--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -3,7 +3,7 @@
     <%- include('_form_fields') %>
     <div class="form-row form-row-end btn-row">
         <a class="btn btn-primary" href="/films">cancel</a>
-        <button class="btn btn-primary" type="submit" disabled>Create</button>
+        <button class="btn btn-primary" type="submit">Create</button>
     </div>
 </form>
 
