--- a/public/stylesheets/shared/header.css
+++ b/public/stylesheets/shared/header.css
@@ -1,57 +1,58 @@
 :root {
-    --nav-title-font-size: 4rem;
-    --nav-title-font-weight: bold;
-    --nav-link-font-weight: 300;
+  --nav-title-font-size: 4rem;
+  --nav-title-font-weight: bold;
+  --nav-link-font-weight: 300;
 }
 
 .header-title {
-    color: var(--color-text-light);
-    text-decoration: none;
-    font-size: var(--nav-title-font-size);
-    font-weight: var(--nav-title-font-weight);
-    margin-left: 50px;
+  color: var(--color-text-light);
+  text-decoration: none;
+  font-size: var(--nav-title-font-size);
+  font-weight: var(--nav-title-font-weight);
+  margin-left: 50px;
 }
 
 .header-nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5rem;
 }
 
 .header-nav ul {
-    display: flex;
-    margin: 0;
-    margin-top: 20px;
-    margin-right: 100px;
-    padding: 0;
-    border-radius: 0.5rem;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
-    border-right: 1px solid white;
-    border-left: 1px solid white;
+  display: flex;
+  margin: 0;
+  margin-top: 20px;
+  margin-right: 100px;
+  padding: 0;
+  border-radius: 0.5rem;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
 }
 
 li .admin-btn {
-    border: 1px solid white;
+  border: 1px solid white;
 }
 
 li .admin-btn:hover {
-    border: 1px solid red;
+  border: 1px solid red;
 }
 
 .header-nav li {
-    list-style: none;
+  list-style: none;
+  font-size: 25px;
 }
 
 .header-nav li a {
-    text-decoration: none;
-    color: var(--color-text-light);
-    font-weight: var(--nav-link-font-weight);
-    padding: 1rem;
+  text-decoration: none;
+  color: var(--color-text-light);
+  font-weight: var(--nav-link-font-weight);
+  padding: 1rem;
 }
 
 .header-nav li a:hover {
-    color: hsl(0, 2%, 49%);
+  color: hsl(0, 2%, 49%);
 }
